<?xml version="1.0"?>
<package format="2">
  <name>cr2016_control</name>
  <version>0.0.0</version>
  <description>The cr2016_control package</description>

  <maintainer email="disktnk11@gmail.com">Daisuke Tanaka</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>angles</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>control_toolbox</exec_depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/plugins.xml" />
  </export>
</package>
