<?xml version="1.0"?>
<package format="2">
  <name>samplebot_control</name>
  <version>0.0.0</version>
  <description>The samplebot_control package</description>

  <maintainer email="disktnk11@gmail.com">Daisuke Tanaka</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>controller_manager</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>

</package>
