<?xml version="1.0"?>
<package format="2">
  <name>samplebot_description</name>
  <version>0.0.0</version>
  <description>The samplebot_description package</description>

  <maintainer email="disktnk11@gmail.com">Daisuke Tanaka</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
