<?xml version="1.0"?>
<package format="2">
  <name>samplebot_gazebo</name>
  <version>0.0.0</version>
  <description>The samplebot_gazebo package</description>

  <maintainer email="disktnk11@gmail.com">Daisuke Tanaka</maintainer>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>

</package>
